adding tomee-maven-plugin in moviefun pom TOMEE-174: TomEE Maven Plugin
git-svn-id: https://svn.apache.org/repos/asf/openejb/trunk/openejb@1238098 13f79535-47bb-0310-9956-ffa450edef68