@@ -62,6 +62,15 @@
           </configuration>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>org.apache.openejb</groupId>
+        <artifactId>tomee-maven-plugin</artifactId>
+        <version>0.0.1-SNAPSHOT</version>
+        <configuration>
+          <tomeeClassifier>plus</tomeeClassifier>
+          <args>-Xmx512m -XX:PermSize=256m</args>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
   <dependencies>
@@ -85,7 +94,8 @@
     <dependency>
       <groupId>org.apache.myfaces.core</groupId>
       <artifactId>myfaces-impl</artifactId>
-      <version>2.0.3</version>
+      <version>2.1.2</version>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.apache.openejb</groupId>
